--- a/src/layouts/SideBar.scss
+++ b/src/layouts/SideBar.scss
@@ -31,9 +31,10 @@
     transition: all 0.5s ease-out;
   }
   .side-menu-items {
+    height: 100%;
     display: block;
-    height: 90%;
-    overflow: scroll;
+    padding-bottom: 6rem;
+    overflow-y: auto;
   }
   .nav-item {
     border-bottom: 1px solid black;
