--- a/src/layouts/SideBar.scss
+++ b/src/layouts/SideBar.scss
@@ -1,24 +1,27 @@
 @import "../styles/colors";
 
-.side-bar {
-  background-color: $primary;
+.side-bar {  
   color: $white;
+  width: 22%;
   a {
     color: $white;
-  }
-  border-right: 1px solid black;
+  }  
   .sidebar-logo {
+    background-color: $primary;
     height: 10%;
     border-bottom: 1px solid black;
+    border-right: 1px solid black;
   }
 
   .logo,
   .side-bar-icon {
     width: 3rem;
+    height: 3rem;
   }
 
   .side-bar-icon-shrinked {
-    width: 2.75rem;
+    width: 3rem;
+    height: 3rem;
   }
 
   &.shrink-sidebar {
@@ -31,7 +34,9 @@
     transition: all 0.5s ease-out;
   }
   .side-menu-items {
+    background-color: $primary;
     height: 100%;
+    border-right: 1px solid black;
     display: block;
     padding-bottom: 6rem;
     overflow-y: auto;
