--- a/src/layouts/SideBarMobile.scss
+++ b/src/layouts/SideBarMobile.scss
@@ -11,12 +11,16 @@
     background-color: $primary;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
+    .logo {
+      width: 3rem;
+      height: 3rem;
+    }
   }
 
-  .logo,
-  .side-bar-icon, .side-bar-icon-shrinked {
+  .side-bar-icon,
+  .side-bar-icon-shrinked {
     width: 3rem;
-    height: 3rem;
+    height: 2rem;
   }
 
   .side-menu-items {
