--- a/src/layouts/Header.scss
+++ b/src/layouts/Header.scss
@@ -3,7 +3,7 @@
 .header {
   background-color: $primary;
   height: 10%;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $black;
   width: 100%;
   .fa-sliders-h {
     cursor: pointer;
