--- a/src/layouts/HeaderMobile.scss
+++ b/src/layouts/HeaderMobile.scss
@@ -3,7 +3,7 @@
 .header-mobile {
   background-color: $primary;
   height: 3.8rem;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $black;
   width: 100%;
   left: 22%;
   .fa-sliders-h {
