--- a/src/layouts/SideBarMobile.scss
+++ b/src/layouts/SideBarMobile.scss
@@ -9,8 +9,8 @@
   .sidebar-logo {
     height: 3.8rem;
     background-color: $primary;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
+    border-bottom: 1px solid $black;
+    border-right: 1px solid $black;
     .logo {
       width: 3rem;
       height: 3rem;
@@ -37,6 +37,6 @@
     overflow-y: auto;
   }
   .nav-item {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid $black;
   }
 }
