--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,6 @@
-@import "./styles/colors";
-@import "./layouts/SideBar.scss";
-@import "./components/MenuItem.scss";
+@import "./colors";
+@import "../layouts/SideBar.scss";
+@import "../components/MenuItem.scss";
 
 .offcanvas {
   @extend .side-bar;
@@ -13,6 +13,6 @@
     justify-content: end;
     background-color: $primary;
     height: 3.75rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid $black;
   }
 }
